language-server/src/tests/snapshots/gleam_language_server__tests__action__import_internal_module_from_same_package.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  internal.some_internal_function()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  internal.some_internal_function()
  ↑                                
}


----- AFTER ACTION
import app/internal

pub fn main() {
  internal.some_internal_function()
}
