language-server/src/tests/snapshots/gleam_language_server__tests__action__import_module_from_constructor.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let value = values.Value(10)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let value = values.Value(10)
              ▔▔▔▔▔▔↑         
}


----- AFTER ACTION
import values

pub fn main() {
  let value = values.Value(10)
}
