language-server/src/tests/snapshots/gleam_language_server__tests__action__import_module_from_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  result.is_ok()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  result.is_ok()
  ▔▔▔▔▔▔↑       
}


----- AFTER ACTION
import result

pub fn main() {
  result.is_ok()
}
