language-server/src/tests/snapshots/gleam_language_server__tests__action__import_module_from_type.snap
---
source: language-server/src/tests/action.rs
expression: type Wobble = wibble.Wubble
---
----- BEFORE ACTION
type Wobble = wibble.Wubble
              ▔▔▔▔▔▔↑      


----- AFTER ACTION
import mod/wibble

type Wobble = wibble.Wubble
