language-server/src/tests/snapshots/gleam_language_server__tests__action__import_path_module_from_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  io.println(\"Hello, world!\")\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  io.println("Hello, world!")
  ▔▔↑                        
}


----- AFTER ACTION
import gleam/io

pub fn main() {
  io.println("Hello, world!")
}
