language-server/src/tests/snapshots/gleam_language_server__tests__action__import_similar_module.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  reult.is_ok()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  reult.is_ok()
  ▔▔▔▔▔↑       
}


----- AFTER ACTION
import result

pub fn main() {
  result.is_ok()
}
