language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_constructor_qualified_inside_pattern_without_existing_import.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble\n\nfn wibble(wib: Wibble) -> Nil {\n    case wib {\n        Wobble -> Nil\n    }\n}\n"
---
----- BEFORE ACTION

import wobble

fn wibble(wib: Wibble) -> Nil {
    case wib {
        Wobble -> Nil
        ↑            
    }
}


----- AFTER ACTION

import wibble
import wobble

fn wibble(wib: Wibble) -> Nil {
    case wib {
        wibble.Wobble -> Nil
    }
}
